[package]
name = "chain_rag"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Concurrent Retrieval Augmented Generation system"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1.74"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hashing
seahash = "4.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Network protocol
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["metrics"]
metrics = [] 